[package]
edition = "2021"
name = "echelons"
version = "1.0.0"
description = "A CLI tool that creates repeatable directory hierarchies for projects"
license = "MIT"
repository = "https://github.com/graysonarts/rust-echelons"
homepage = "https://github.com/graysonarts/rust-echelons"
documentation = "https://github.com/graysonarts/rust-echelons"

[dependencies]
log = "0"
pretty_env_logger = "0"
serde = { version = "1", features = [ "derive" ]}
toml = "0"
structopt = "0"
structopt-flags = "0"
dirs = "4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
